--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "git-commit-msg-linter": "^4.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
